# timecard

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  cmake.yml
cmake/: Findargon.cmake
include/: CalculateDurations.h  CalculateDurations.hpp  CheckFlags.h  DurationMap.h  FormatDurations.h  FormatDurations.hpp  ParseTimepoint.h  PrintDurations.h  VectorizeArguments.h
include/timecard/: CalculateDurations.hpp  DurationMap.hpp  FormatDurations.hpp  ParseTimepoint.hpp
src/: CalculateDurations.cpp  CalculateDurations.h  FormatDurations.cpp  Main.cpp  ParseTimepoint.cpp  Timecard.cpp
test/: CMakeLists.txt  UnitTests.cpp
tests/: CMakeLists.txt  CalculateDurations.cpp  DurationMap.cpp  FindCatch2.cmake  FormatDurations.cpp  ParseTimepoint.cpp  Timecard.cpp  UnitTests.cpp
